Fixed #database_helplist Alignment

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -266,6 +266,10 @@ html, body, form, nav, ul, div {
 #sidebar {
 	margin: 0;
 }
+#database_helpList {
+	text-align: left;
+	margin-left: 20px;
+}
 .database-content {
 	width: 100%;
 	float: left;
